# Open_Clanker

./: .gitignore  ARCHITECTURE_COMPARISON.md  Cargo.toml  GATEWAY_INTEGRATION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  QUICK_START_RUST.md  README.md  README_MIGRATION.md  REVIEW.md  TECHNICAL_ARCHITECTURE.md  TODO.md  open-clanker  package-lock.json  test_colored.rs
crates/agent/: Cargo.toml
crates/agent/src/: anthropic.rs  factory.rs  grok.rs  groq.rs  lib.rs  openai.rs  orchestrator.rs  placeholder.rs  types.rs  zai.rs
crates/channels/: Cargo.toml
crates/channels/src/: discord.rs  error.rs  lib.rs  telegram.rs
crates/cli/: Cargo.toml
crates/cli/src/: banner.rs  main.rs  onboard.rs  tui.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  error_tests.rs  lib.rs  traits.rs  types.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: broadcast.rs  handlers.rs  lib.rs  middleware.rs  processor.rs  server.rs  state.rs  types.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: CONFIGURATION.md  GROQ_PROVIDER.md
scripts/: test_websocket.py
test_colored/: Cargo.toml
test_colored/src/: main.rs
