[package]
name = "clanker-agent"
version = "1.0.0"
edition = "2021"

[dependencies]
# Workspace dependencies
clanker-config = { workspace = true }
clanker-core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }
# Async utilities
futures = { workspace = true }

# Utilities
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
mockito = "1.4"
