[package]
name = "clanker-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "open-clanker"
path = "src/main.rs"

[dependencies]
clanker-core = { path = "../core" }
clanker-config = { path = "../config" }
clanker-gateway = { path = "../gateway" }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
colored = "2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
