[package]
name = "clanker-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clanker-core = { path = "../core" }
clanker-config = { path = "../config" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
tokio-util = { workspace = true, features = ["codec"] }
axum = { workspace = true, features = ["ws", "macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-gzip"] }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
        toml = "0.8"
wiremock = "0.6"
tempfile = "3"
